--- a/css/ui-ux.css
+++ b/css/ui-ux.css
@@ -182,9 +182,4 @@ p {
     display: inline-block;
     padding: 10px 20px;
     background-color: #007bff; /* Button background color */
-    color: #fff; /* Button text color */
-    text-decoration: none;
-    border-radius: 5px;
-}
-
-
+    color: #fff; /* Button text colo
